src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');

@layer base{
  body{
    @apply overflow-x-hidden font-body box-border;
  }
}

